-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.8.0, 6.8.1
-
None
-
-
c4f7a15b0 (dev), e36f88b12 (6.9), fb9a2e78b (6.8)
The image appears too large as if it was scaled up. See first screenshot. The Qt5 version loads the image properly (second screenshot).
Qt6 loads the image into RGBX64 format. The Qt5 version loads the file into RGB32 format.
The nature of the corruption could indicate a buffer overflow, but I did not get any error from valgrind.
I have tested on Linux and Windows, libtiff 4.7 and 4.6 if that is relevant, the bug is the same. Which leads me to believe all platforms are affected.
The description of file from "file" command:
16-bit-grayscale.tiff: TIFF image data, little-endian, direntries=19, height=480, bps=16, compression=deflate, PhotometricInterpretation=BlackIsZero, description=Created with GIMP, orientation=upper-left, width=640
Qt5:
For Gerrit Dashboard: QTBUG-134112 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
627691,2 | Fix tiff reading for 16bpc grayscale with alpha sample | dev | qt/qtimageformats | Status: MERGED | +2 | +1 |
627820,2 | Fix tiff reading for 16bpc grayscale with alpha sample | 6.9 | qt/qtimageformats | Status: MERGED | +2 | 0 |
627932,2 | Fix tiff reading for 16bpc grayscale with alpha sample | 6.8 | qt/qtimageformats | Status: MERGED | +2 | 0 |