Fix tiff reading for 16bpc grayscale with alpha sample

Having bitPerSample=16 and samplesPerPixel=2, this format was wrongly
identified as a 48bpp rgb image.

Fixes: QTBUG-134112
Pick-to: 6.9 6.8
Change-Id: Ib62715f10fa5af899cc130c8951ec346939420b9
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>